force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Build__c/agf__ADM_Build__c.object-meta.xml
<CustomObject>
    <label>Build</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>