force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Build__c/fields/agf__Release_Freeze__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Freeze__c</fullName>
    <label>Release Freeze</label>
    <type>Date</type>
</CustomField>