force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Build__c/fields/agf__Weeks_prior_to_release__c.field-meta.xml
<CustomField>
    <fullName>agf__Weeks_prior_to_release__c</fullName>
    <formula>IF ( NOT( ISNULL( agf__Release_Freeze__c ) ), 
CEILING( ( TODAY() - agf__Release_Freeze__c ) / 7 ),
null)</formula>
    <label>Weeks prior to release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>